# babel

./: README.md  requirements.txt  requirements_dev.txt  setup.cfg
examples/: get_page.py  search_text.py
pybel/: __main__.py  page.py
pybel/utils/: string.py
src/babel/: __main__.py  babel.py  page.py
src/babel/utils/: string.py
src/pybel/: __main__.py  page.py
src/pybel/utils/: __init__.py  math.py  string.py
src/utils/: math.py
tests/test_babel/: conftest.py  test_library.py  test_response.html  test_response_search.html
tests/test_page/: conftest.py  test_error_handling.py  test_file_handler.py  test_library.py  test_misc.py  test_requests.py  test_validation.py
tests/test_utils/: test_math.py  test_string.py
