[metadata]
name = babel
version = 0.0.1
license = "GNU General Public License v3.0"
description = API for interacting with the library of babel
long_description = file: README.md
author = Simon Paulsson

[options]
packages = find:
package_dir =
    =src
include_package_data = True
# install_requires = 

[options.packages.find]
where=src