[metadata]
name = pybel
version = 1.0.0
license = "GNU General Public License v3.0"
description = API for interacting with the library of babel
long_description = file: README.md
author = Simon Paulsson

[options]
packages = pybel
include_package_data = True
install_requires = 
    requests
    beautifulsoup4
